# inbox-cast

./: .gitignore  CLAUDE.md  LICENSE  README.md  config-publish.yaml  config-simple.yaml  config-step2.yaml  config-step3.yaml  config.yaml  inboxcast.service  main.py  pyproject.toml  test_episode_script.py
.claude/: implementation-plan.md
.claude/apireference/: minimax.md
.claude/commands/: commit.md
.claude/done/: PUBLISHING.md  STEP2-GUIDE.md  episode-script-enhancement-plan.md
.claude/prompts/: PRD-MVP.md  dogfood.md  podcast-publishing-plan.md
.claude/todos/: todos.md
inboxcast/: __init__.py  config.py  types.py
inboxcast/audio/: stitch.py
inboxcast/clean/: __init__.py  readability.py
inboxcast/cli/: main.py
inboxcast/cloud/: __init__.py  azure.py
inboxcast/dedupe/: __init__.py  semantic.py  simple.py
inboxcast/output/: rss.py
inboxcast/policy/: __init__.py  guards.py  pre_llm_checks.py
inboxcast/publish/: episode_history.py
inboxcast/script/: __init__.py  episode_engine.py
inboxcast/server/: __init__.py  app.py
inboxcast/sources/: rss.py
inboxcast/summarize/: __init__.py  engine.py  openai_engine.py
inboxcast/tts/: abi.py  espeak.py  minimax.py
inboxcast/utils/: __init__.py  script_parser.py
