[project]
name = "inbox-cast"
version = "0.1.0"
description = "AI newsletter summarization to private audio podcasts"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.10",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
inboxcast = "inboxcast.cli.main:cli"

[tool.uv]
package = true
