[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-cast"
version = "0.1.0"
description = "AI newsletter summarization to private audio podcasts"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.10",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
    # Step 2: Smart Content Processing
    "readability-lxml>=0.8.1",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
]

[project.scripts]
inboxcast = "inboxcast.cli.main:cli"

[tool.setuptools.packages.find]
include = ["inboxcast*"]

[tool.uv]
package = true
