[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-cast"
version = "0.1.0"
description = "AI newsletter summarization to private audio podcasts"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.10",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    # Step 2: Smart Content Processing
    "readability-lxml>=0.8.1",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
    # Step 3: Production Audio Pipeline
    "pydub>=0.25.1",
    "pydub-stubs>=0.25.1.3",
    "audioop-lts",
    # Podcast Publishing
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
inboxcast = "inboxcast.cli.main:cli"

[tool.setuptools.packages.find]
include = ["inboxcast*"]

[tool.uv]
package = true
